@@ -192,7 +192,7 @@ public class RingBufferBundler extends BaseBundler {
             default:
                 try {
                     Class<BiConsumer<Integer,Integer>> clazz=Util.loadClass(st, this.getClass());
-                    return clazz.newInstance();
+                    return clazz.getDeclaredConstructor().newInstance();
                 }
                 catch(Throwable t) {
                     log.error("failed creating wait_strategy " + st, t);
